<resources>
    <string name="app_name">Agenda IPBAL</string>

    <string name="church">IPBAL</string>
    <string name="church_site">Igreja Presbiteriana do Brasil em Arthur Lundgren 1</string>

    <string name="pageTitleHome">IPBAL Página Inicial</string>
    <string name="pageTitleIpalSemanal">Programação Semanal da IPBAL</string>
    <string name="pageTitleIpalAnual">Datas Comemorativas IPB</string>
    <string name="pageTitleUMP">Programação da UMP</string>
    <string name="pageTitleUPH">Programação da UPH</string>
    <string name="pageTitleSAF">Programação da SAF</string>
    <string name="pageTitleSobre">Informações do aplicativo</string>

    <string name="pageBodyHome">
        Bem vindo(a) ao aplicativo da IPBAL para consultar a programação de nossa igreja e nossas sociedades para o ano de 2018.\n
        \n
        Onde você pode nos encontrar:\n
        https://ipbal.wordpress.com/inicio\n
        http://fb.com/ipbarthurlundgren\n
        https://www.instagram.com/ipbarthurlundgren\n
        \n
        Você pode entrar em contato pelo email: ipbarthurlundgren@gmail.com\n
        \n
        Você pode nos visitar no endereço: R. Dr. José Mariano, 12-138 - Artur Lundgren I, Paulista - PE, 53417-350\n
        Nos encontre pelo Google Maps: https://goo.gl/maps/YVNAVz5op4m\n
        \n
        Você pode entrar em contato pelo número: (81) 98471-6542
    </string>

    <string name="pageBodyIpalSemanal">
        Horário dos Cultos ou Atividades\n
        \n
        Domingo:\n
        09:00 – Escola Bíblica Dominical\n
        18:00 – Culto de Adoração\n
        \n
        Terça–Feira:\n
        19:30 - Ensaio do Coral\n
        \n
        Quarta-Feira:\n
        19:00 – Acons. Pastoral\n
        19:30 – Culto de Oração\n
        \n
        Quinta-Feira:\n
        19:00 – Acons. Pastoral\n
        19:30 – Culto de Doutrina\n
        \n
        Sexta–Feira:\n
        19:30 - Culto no lar\n
        \n
        Sábado:\n
        1º Sábado - 07:00 – Culto de Jejum e Oração\n
        2º Sábado - 19:00 - Programação da UMP\n
        3º Sábado - 14:30 – Evangelização
    </string>

    <string name="pageBodyIpalAnual">
        Janeiro\n
        01 a 08 - Semana Universal de Oração\n
        01 - Dia Mundial da Paz\n
        07 - Dia da liberdade de cultos\n
        21 - Dia Mundial da Religião\n
        \n
        Fevereiro\n
        04 - Dia do Homem Presbiteriano\n
        11 - Dia da Mulher Presbiteriana\n
        \n
        Março\n
        05 - Dia Mundial da Oração\n
        10 - Primeiro culto protestante no Brasil\n
        11 - Dia da educação cristã\n
        27 - Dia da Casa Editora Presbiteriana\n
        \n
        Abril\n
        02 - Paixão de Cristo\n
        04 – Páscoa\n
        \n
        Maio\n
        2º domingo - Dia das Mães\n
        3º domingo - Dia Nacional do Jovem Presbiteriano\n
        \n
        Junho\n
        08 - Aniversário do Jornal Brasil Presbiteriano\n
        12 - Instalada a Sociedade Bíblica no Brasil\n
        \n
        Julho\n
        1 à 31 - Mês dos pastores jubilados e viúvas de pastores\n
        09 - Dia do Diácono\n
        4º domingo - Dia Nacional do Adolescente Presbiteriano\n
        \n
        Agosto\n
        05 - Dia do Presbítero\n
        12 - Dia do Presbiterianismo Nacional e Dia das Missões\n
        2º domingo - Dia dos pais\n
        \n
        Setembro\n
        08 - Dia dos seminários e seminaristas\n
        3º domingo - Dia da Escola Dominical\n
        \n
        Outubro\n
        01 - Dia Nacional e internacional do Idoso\n
        11 - Dia da SAF em Revista\n
        12 - Dia das crianças e dia nacional da criança presbiteriana\n
        31 - Dia da Reforma Protestante\n
        \n
        Novembro\n
        01 - Dia do Evangélico\n
        05 - Circula pela primeira vez o Imprensa Evangélica, primeiro jornal religioso do País\n
        11 - Dia Nacional da SAF\n
        15 - Dia da proclamação da República\n
        22 - Dia Nacional de Ações de Graças\n
        30 - Dia do Teólogo\n
        \n
        Dezembro\n
        08 - Dia Nacional da Família\n
        2º domingo - Dia da Bíblia e da Mulher de Pastor\n
        17 - Dia do Pastor\n
        25 - Natal\n
    </string>

    <string name="pageBodyUMP">
        Janeiro\n
        20 – Palestra: “Memorizando os Salmos” (em CAETÉS 1)\n
        \n
        Fevereiro\n
        17 – Evangelismo no Sinal + Cinemada\n
        \n
        Março\n
        10 – Acústico UMP + Sorvetada\n
        \n
        Abril\n
        01 – Peça da Páscoa\n
        14 – Estudo Direcionado\n
        \n
        Maio\n
        05 – Dia de Lazer\n
        13 – Homenagem às Mães\n
        \n
        Junho\n
        09 – Jantar dos Namorados\n
        \n
        Julho\n
        14 – Sopão\n
        28 – Confraternização do Semestre\n
        \n
        Agosto\n
        11 – Roda Viva\n
        12 – Homenagem aos Pais\n
        \n
        Setembro\n
        22 – Culto de Gratidão da UMP\n
        \n
        Outubro\n
        14 – EBD das Crianças\n
        27 – Visita a Instituição de Crianças\n
        \n
        Novembro\n
        10 – Eleição UMP\n
        24 – Palestra: Tema a Definir\n
        \n
        Dezembro\n
        08 – Confraternização do Semestre
    </string>

    <string name="pageBodyUPH">
        Janeiro\n
        02 - Semana Universal de Oração com a direção da UPH\n
        \n
        Fevereiro\n
        18 - Comemorar o dia da mulher presbiteriana\n
        \n
        Março\n
        11 - Comemorar o dia internacional da mulher\n
        18 - Comemorar o aniversário da igreja e do grupo mensageiros de Cristo\n
        23 - Reunião Plenária da UPH, às 19:30\n
        \n
        Abril\n
        15 - Comemorar o aniversário do pastor\n
        \n
        Maio\n
        20 - Comemorar o dia da mocidade\n
        21 até 25 - Semana de oração pela família\n
        \n
        Junho\n
        30 - Reunião Plenária da UPH, às 19:00\n
        \n
        Julho\n
        15 - Comemorar dia do diácono\n
        \n
        Agosto\n
        25 - Intercâmbio com a UPH da 1ª. IPB de Paulista\n
        \n
        Outubro\n
        19 - Reunião extraordinária da UPH, para eleição da nova diretoria
    </string>

    <string name="pageBodySAF">
        Janeiro\n
        03 à 13 - Semana de oração. (Participação junto com a igreja)\n
        30 - Reunião departamental\n
        \n
        Fevereiro\n
        04 - Dia do Homem Presbiteriano.\n
        11 - Dia da mulher Presbiteriana\n
        1ª segunda-feira de cada mês - Ensaio conjunto SAF.\n
        1º sábado de cada mês - Culto de Jejum e Oração.\n
        \n
        Março\n
        08 - Dia da mulher.\n
        24 - Vista da SAF.\n
        1ª segunda-feira de cada mês - Ensaio conjunto SAF.\n
        1ª sexta-feira do mês - Dia de Oração das SAFs. (Comemorado no culto de oração dirigido pela SAF).\n
        Aniversariantes do trimestre comemoração na departamental.\n
        \n
        Abril\n
        14 - Aniversario do pastor.\n
        28 - Atividade da Sinodal cuidando da boa idade. (Juntando as panelas)\n
        1ª segunda-feira de cada mês - Ensaio conjunto SAF.\n
        Última terça-feira do mês - Reunião Plenária.\n
        Reunião Departamental.\n
        \n
        Maio\n
        05 - Aniversário da SAF.\n
        19 - Atividade Federação. Manhã de oração. - Igreja de Jardim Paulista.\n
        1ª segunda-feira de cada mês - Ensaio conjunto SAF.\n
        2º ou 4º sábado de cada mês - Visita da SAF.\n
        Chá Evangelístico para as mães.  Dia das Mães.\n
        Semana de Oração da Família. (atividade em conjunto com a igreja.)\n
        Reunião Plenária\n
        Reunião Departamental\n
        \n
        Junho\n
        02 - Atividade da Sinodal. Inspirativa (Tarde cultural Colégio Agnes).\n
        16 - Evangelismo parque das Paineiras\n
        1ª segunda-feira de cada mês - Ensaio conjunto SAF.\n
        2º ou 4º sábado de cada mês - Visita da SAF.\n
        Última terça-feira do mês - Reunião Plenária.\n
        Reunião Departamental. Aniversariantes do trimestre.\n
        Palestra para casais.\n
        \n
        Julho\n
        07 - Gincana.\n
        21 - Gincana.\n
        1ª segunda-feira de cada mês - Ensaio conjunto SAF.\n
        2º ou 4º sábado de cada mês - Vista da SAF\n
        Última terça-feira do mês - Reunião Plenária.\n
        Reunião Departamental\n
        \n
        Agosto\n
        05 - Dia so Presbítero. Jogral\n
        1ª segunda-feira de cada mês - Ensaio conjunto SAF.\n
        2º ou 4º sábado de cada mês - Vista da SAF\n
        Última terça-feira do mês - Reunião Plenária.\n
        Atividade da Sinodal. Evangelismo parque 13 de maio. 8h.\n
        Dia dos pais. Atividade a combinar.\n
        Reunião Departamental\n
        Trabalho sobre missões.\n
        \n
        Setembro\n
        1ª segunda-feira de cada mês - Ensaio conjunto SAF.\n
        2º ou 4º sábado de cada mês - Vista da SAF\n
        Última terça-feira do mês - Reunião Plenária.\n
        Reunião Departamental. Aniversariantes do trimestre.\n
        Comemoração da primavera.\n
        \n
        Outubro\n
        30 - Eleição da nova diretória.\n
        1ª segunda-feira de cada mês - Ensaio conjunto SAF.\n
        2º ou 4º sábado de cada mês - Vista da SAF\n
        Última terça-feira do mês - Reunião Plenária.\n
        Reunião Departamental.\n
        Dia das crianças. (participar apoiando a igreja e os demais departamentos).\n
        Inspirativa\n
        \n
        Novembro\n
        10 - Congresso da Federação.\n
        1ª segunda-feira de cada mês - Ensaio conjunto SAF.\n
        2º ou 4º sábado de cada mês - Vista da SAF\n
        Última terça-feira do mês - Reunião Plenária.\n
        Reunião Departamental.\n
    </string>

    <string name="pageBodySobre">
        Obrigado por usar nosso aplicativo para saber as informações sobre a programação de nossa igreja e de nossas sociedades.\n
        \n
        Versão: 1.5.3\n
        Desenvolvido pela Equipe de Multimidia da IPBAL
    </string>

</resources>
